# VCFGeneratorLiteForTkinterTEST

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  README.md  README.zh-CN.md  README.zh.md  README_pypi.md  build.bat  file_version_info.txt  main.py  metadata.yml  os-notices.toml  os_notices.toml  pyproject.toml  setup.iss  vcf-generator.spec  vcf_generator.spec  vcf_generator_lite.iss  vcf_generator_lite.spec  vcf_generator_lite_metadata.yml  vcf_generator_lite_versionfile.txt  vcf生成器.py  vcf生成器.pyw  vcf生成器.spec  versionfile.txt
.gitee/ISSUE_TEMPLATE/: bug.yaml  config.yml  enhancement.yaml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  enhancement.yaml
.github/workflows/: build.yml  build_all.yml  build_app.yml  build_apps.yml  prepare-release.yml  release.yml  test.yml
docs/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.md  configure.md  faq.md  profile.md
docs/compatibility/: runs-on-older-windows.md
docs/dev/: README.md  index.md  visual.md
docs/legal/: os-notices.md  os_notices.md  os_notices_template.py
public/: 启动vcf生成器.bat
scripts/: buildApp.py  buildSetup.py  build_app.py  build_installer.py  changeVersion.py  change_version.py  generateVersionFile.py  install_innosetup.py  prepare_innosetup_extensions.py  utils.py  version.py
scripts/docs/: generate_os_notices.py
src/: __main__.py  main.py
src/vcf_generator/: __main__.py  constants.py
src/vcf_generator/assets/data/: os_notice.json
src/vcf_generator/console/: buildApp.py
src/vcf_generator/model/: Person.py
src/vcf_generator/ui/: base.py  main.py
src/vcf_generator/ui/about/: __init__.py
src/vcf_generator/ui/base/: __init__.py
src/vcf_generator/ui/main/: __init__.py
src/vcf_generator/util/: display.py  menu.py  person.py  resource.py  vcard.py  widget.py
src/vcf_generator/widget/: scrolledtext.py
src/vcf_generator/widget/tkhtmlview/: __init__.py  html_parser.py
src/vcf_generator_lite/: __main__.py  __version__.py  constants.py
src/vcf_generator_lite/assets/: __init__.py
src/vcf_generator_lite/assets/data/: os_notice.json
src/vcf_generator_lite/core/: vcf_generator.py
src/vcf_generator_lite/dialogs/invalid_items/: __init__.py  common.py  controller.py  dialog.py
src/vcf_generator_lite/entries/: cli.py  common.py  gui.py  union.py
src/vcf_generator_lite/layout/: vertical_dialog_layout.py
src/vcf_generator_lite/layouts/: vertical_dialog_layout.py
src/vcf_generator_lite/model/: FontConfig.py
src/vcf_generator_lite/models/: contact.py  phone_rule.py  vcf_generator.py
src/vcf_generator_lite/resources/: __init__.py
src/vcf_generator_lite/resources/data/: os_notice.json  os_notices.json
src/vcf_generator_lite/resources/locales/: en.toml  zh_CN.toml
src/vcf_generator_lite/resources/texts/: about.html
src/vcf_generator_lite/services/: vcf_generator.py
src/vcf_generator_lite/theme/: __init__.py  base.py  clam_theme.py  platform_theme.py  widows_theme.py
src/vcf_generator_lite/themes/: __init__.py  base.py  clam_theme.py  default_patch.py  vista_patch.py  widows_theme.py
src/vcf_generator_lite/ui/about/: __init__.py
src/vcf_generator_lite/ui/base/: __init__.py
src/vcf_generator_lite/ui/layouts/: vertical_dialog_layout.py
src/vcf_generator_lite/ui/main/: __init__.py
src/vcf_generator_lite/ui/message_boxes/: external_app_message_boxes.py
src/vcf_generator_lite/ui/themes/: __init__.py  abs.py  base.py  default_patch.py  vista_patch.py
src/vcf_generator_lite/ui/widgets/: line_number_bar.py  scrolled_treeview.py  text_menu.py
src/vcf_generator_lite/util/: contact.py  curry.py  dialog.py  display.py  display_windows.py  environment.py  io.py  menu.py  person.py  phone.py  resource.py  resources.py  vcard.py  widget.py
src/vcf_generator_lite/util/display/: __init__.py  base.py  null_impl.py  windows_10_impl.py  windows_2000_impl.py  windows_8_1_impl.py  windows_vista_impl.py
src/vcf_generator_lite/util/style/: theme.py
src/vcf_generator_lite/util/tkinter/: font.py  menu.py  misc.py  theme.py  widget.py  window.py
src/vcf_generator_lite/utils/: deque_queue.py  environment.py  external_app.py  graphics.py  locales.py  localized_exception.py  resources.py
src/vcf_generator_lite/utils/display/: __init__.py  base.py  null_impl.py  windows_10_impl.py  windows_2000_impl.py  windows_8_1_impl.py  windows_vista_impl.py
src/vcf_generator_lite/utils/dpi_aware/: __init__.py  windows_impl.py
src/vcf_generator_lite/utils/tkinter/: accelerators.py  busy.py  font.py  menu.py  misc.py  text.py  theme.py  widget.py  window.py
src/vcf_generator_lite/widget/: menu.py  scrolled_text.py  scrolled_treeview.py  scrolledtext.py  themed_text.py
src/vcf_generator_lite/widget/tkhtmlview/: __init__.py  html_parser.py
src/vcf_generator_lite/widgets/: line_number_bar.py  menu.py  scrolled_treeview.py
src/vcf_generator_lite/widgets/tkhtmlview/: __init__.py  html_parser.py  utils.py
src/vcf_generator_lite/window/about/: __init__.py  controller.py  window.py
src/vcf_generator_lite/window/base/: __init__.py  constants.py
src/vcf_generator_lite/window/invalid_lines/: __init__.py  controller.py  window.py
src/vcf_generator_lite/window/main/: __init__.py  (+3 more)
tests/: test_vcard.py
tests/core/: test_vcf_generator.py  test_vcf_generator_integration.py
tests/models/: test_contact.py
tests/utils/: __init__.py  test_deque_queue.py
typings/ttk_text/: __init__.pyi  scrolled_text.pyi  utils.pyi
vcf_generator/: __init__.py  constants.py
vcf_generator/assets/data/: licenses.json
vcf_generator/assets/texts/: about.html
vcf_generator/console/: buildApp.py  buildSetup.py  changeVersion.py
vcf_generator/ui/: base.py  main.py
vcf_generator/ui/about/: __init__.py
vcf_generator/ui/base/: __init__.py
vcf_generator/ui/main/: __init__.py
vcf_generator/util/: dialog.py  display.py  io.py  logger.py  phone.py  resource.py  thread.py  vcard.py  widget.py
vcf_generator/widget/: menu.py  scrolledtext.py
vcf_generator/widget/tkhtmlview/: __init__.py  html_parser.py
(+24 files in other folders)
