[project]
name = "vcf-generator-lite"
version = "4.4.0"
description = "A lightweight tool that quickly converts name and phone number lists into vCard files for batch import to mobile contacts."
authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ttk-text==0.3.1"]
import-names = ["vcf_generator_lite"]

[project.optional-dependencies]
console = ["colorlog>=6.9.0"]

[dependency-groups]
test = ["pytest>=9.0.2"]
lint = ["pyright>=1.1.407", "ruff>=0.14.10"]
build = [
    "pyinstaller>=6.17.0",
    "pyinstaller-versionfile>=3.0.1",
    "requests>=2.32.5",
]
dev = [
    "colorlog>=6.9.0",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "build" },
]


[project.urls]
Repository = "https://gitee.com/hellotool/VCFGeneratorLiteWithTkinter"
Github = "https://github.com/hellotool/VCFGeneratorLiteWithTkinter"
Issues = "https://gitee.com/hellotool/VCFGeneratorLiteWithTkinter/issues/new/choose"

[project.gui-scripts]
vcf-generator-lite = "vcf_generator_lite.__main__:main"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.1"

[tool.uv.pip]
universal = true

[tool.ruff]
line-length = 120
extend-exclude = ["typings/**"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportIncompatibleVariableOverride = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
reportImplicitOverride = "error"
ignore = ["typings", "build", "dist", ".venv"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config"
xfail_strict = true
filterwarnings = ["error", "ignore::DeprecationWarning"]
log_cli = true
log_cli_level = "INFO"
