[project]
name = "vcf-generator-lite"
version = "5.0.0.dev1"
description = "Makes one vCard from a contact list."
authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README_pypi.md"
requires-python = ">=3.12"
dependencies = ["ttk-text==0.3.1"]
import-names = ["vcf_generator_lite"]

[project.optional-dependencies]
console = ["colorlog>=6.9.0"]

[dependency-groups]
test = ["pytest>=9.0.2"]
lint = ["pyright>=1.1.407", "ruff>=0.14.10"]
build = [
    "packaging>=26.0",
    "pyinstaller>=6.17.0",
    "pyinstaller-versionfile>=3.0.1",
    "requests>=2.32.5",
]
dev = [
    "colorlog>=6.9.0",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "build" },
]


[project.urls]
Repository = "https://gitee.com/hellotool/VCFGeneratorLiteWithTkinter"
Github = "https://github.com/hellotool/VCFGeneratorLiteWithTkinter"
Issues = "https://gitee.com/hellotool/VCFGeneratorLiteWithTkinter/issues/new/choose"

[project.scripts]
# 主入口，可能是 GUI，也可能是 CLI。虽然默认启动的是 GUI，但依旧需要使用命令行入口。
vcf-generator-lite = "vcf_generator_lite.__main__:main"
vcf-generator-lite-cli = "vcf_generator_lite.__main__:main_cli"

[project.gui-scripts]
vcf-generator-lite-gui = "vcf_generator_lite.__main__:main_gui"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.1"

[tool.uv.pip]
universal = true

[tool.ruff]
line-length = 120
extend-exclude = ["typings/**"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportIncompatibleVariableOverride = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
reportImplicitOverride = "error"
ignore = ["typings", "build", "dist", ".venv"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
strict_config = true
strict_markers = true
strict_xfail = true
filterwarnings = ["error", "ignore::DeprecationWarning"]
log_cli = true
log_cli_level = "INFO"
